@startuml
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam shadowing false
skinparam class {
    BackgroundColor White
    BorderColor #263238
    ArrowColor #263238
}

package "Construction Service" #AliceBlue {
    package "Adapter" as ConstAdapter {
        class ConstructionController {
            + updateConstructionPendingRequest(String, String): ResponseEntity
        }
        
        interface EmployeeService <<FeignClient>> {
            + isEmployeeExisting(String): WrapperApiResponse
            + getRoleOfEmployeeById(String): WrapperApiResponse
        }
    }

    package "Application" as ConstApp {
        interface ConstructionRequestService {
            + updatePendingRequest(String, String): void
        }
        
        class ConstructionRequestServiceImpl {
            - repository: ConstructionRequestRepository
            - ifRepo: InstallationFormRepository
            - employeeService: EmployeeService
            + updatePendingRequest(String, String): void
            - validateEmployee(String): void
        }
    }

    package "Infrastructure" as ConstInfra {
        interface ConstructionRequestRepository {
            + findById(String): Optional<ConstructionRequest>
        }
        
        interface InstallationFormRepository {
            + save(InstallationForm): InstallationForm
        }
    }

    package "Domain" as ConstDomain {
        class ConstructionRequest {
            - id: String
            - contractId: String
            - installationForm: InstallationForm
        }
        
        class InstallationForm {
            - formCode: String
            - formNumber: String
            - constructedBy: String
        }
    }
}

package "Auth Service" #GhostWhite {
    package "Adapter" as AuthAdapter {
        class AuthorizationController {
            + checkAuthorExisting(String): ResponseEntity
            + getRoleOfEmployeeById(String): ResponseEntity
        }
    }
}

' Relationships
ConstructionController o-- ConstructionRequestService
ConstructionRequestService <|.. ConstructionRequestServiceImpl
ConstructionRequestServiceImpl o-- ConstructionRequestRepository
ConstructionRequestServiceImpl o-- InstallationFormRepository
ConstructionRequestServiceImpl o-- EmployeeService

ConstructionRequest o-- InstallationForm

EmployeeService ..> AuthorizationController : calls (Feign)

@enduml
